# bmadder-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bmadder-pi-prd.md
.deprecated/: lint.mjs  turbo-shim.mjs
.deprecated/templates/: story-template.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/baut/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_deprecated/scripts/: README.md  bmadder.sh  bootstrap_bmadder.py  create_rules.py  init_bmadder.py  validate_stories.py
_deprecated/templates/: tokens-template.md
bmadder-cli/: Cargo.toml
bmadder-cli/src/: agent.rs  bootstrap.rs  git.rs  logging.rs  main.rs  preflight.rs  prompts.rs  story_io.rs  ui.rs
bmadder-cli/src/phases/: cycle.rs  dev.rs  iterative.rs  mod.rs  plan.rs  qa.rs  status.rs
bmadder-core/: Cargo.toml
bmadder-core/src/: agent.rs  config.rs  story.rs
docs/: AGENT-COMPATIBILITY.md  BMAD Dev Cycle Agents × Non-Frontier Models Role Assignment Guide.md  DESIGN-GATE.md  LESSONS-LEARNED.md  WALKTHROUGH.md  zed-dev.md
examples/: .mise.toml
scripts/: README-iterative.md  README.md  bmadder-iterative.sh  bmadder.sh  bootstrap_bmadder.py  create_rules.py  deploy-push.sh  init_bmadder.py  preflight_auth.py  strip_vault_fences.py  sync-to-framework.sh  sync_headless_skills.py  validate_stories.py
templates/: epic-template.md
ui/: BMADder Console.dc.html  Flow Console.dc.html  Mission Board.dc.html  README.md
(+24 files in other folders)
