[package]
name = "bmadder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bmadder"
path = "src/main.rs"

[dependencies]
bmadder-core = { path = "../bmadder-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
